--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.3"
 
     defaultConfig {
@@ -23,8 +23,8 @@ android {
 dependencies {
 //    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:recyclerview-v7:24.0.0'
     //rxjava
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'io.reactivex:rxandroid:1.1.0'
@@ -38,9 +38,8 @@ dependencies {
     //友盟
     compile 'com.umeng.analytics:analytics:latest.integration'
     //内存泄漏检查工具
+    // FIXME: 2016/6/29 0029  这个内存泄漏的检查，正式环境注释掉
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     //fresco
     compile 'com.facebook.fresco:fresco:0.11.0'
     compile project(path: ':library')
