--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gulei.rxjavaandretrofit">
+
     <!-- 震动权限 -->
     <uses-permission android:name="android.permission.VIBRATE" />
     <!-- 允许应用程序联网，以便向我们的服务器端发送数据。 -->
@@ -15,13 +16,15 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <!-- 获取用户设备的IMEI，通过IMEI和mac来唯一的标识用户。 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:name=".GApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
+
         <!-- 友盟的key -->
         <meta-data
             android:name="UMENG_APPKEY"
@@ -38,6 +41,7 @@
         <meta-data
             android:name="URL_CODE"
             android:value="${URL_CODE_VALUE}" />
+
         <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,6 +49,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activity.RecyclerviewActivity" />
+        <activity android:name=".ui.activity.NetActivity"></activity>
     </application>
 
 </manifest>
