--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     //rxjava
     compile 'io.reactivex:rxjava:1.1.3'
     compile 'io.reactivex:rxandroid:1.1.0'
+    //rxjava 内存泄漏问题的解决
+    compile 'com.trello:rxlifecycle:0.6.1'
+    // If you want pre-written Activities and Fragments you can subclass as providers
+    compile 'com.trello:rxlifecycle-components:0.6.1'
     //retrofit2
     compile 'com.squareup.retrofit2:retrofit:2.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
@@ -39,7 +43,7 @@ dependencies {
     compile 'com.umeng.analytics:analytics:latest.integration'
     //内存泄漏检查工具
     // FIXME: 2016/6/29 0029  这个内存泄漏的检查，正式环境注释掉
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
     //fresco
     compile 'com.facebook.fresco:fresco:0.11.0'
     compile project(path: ':library')
