--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.RecyclerviewActivity" />
-        <activity android:name=".ui.activity.NetActivity"></activity>
+        <activity android:name=".ui.activity.NetActivity" />
+        <activity android:name=".ui.activity.UpdateActivity"></activity>
     </application>
 
 </manifest>
