--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
-        manifestPlaceholders = [APP_NAME: "MyApplication", UMENG_CHANNEL_VALUE: "MyApplication","URL_CODE_VALUE":""]
+        manifestPlaceholders = [APP_NAME: "MyApplication", UMENG_CHANNEL_VALUE: "MyApplication","URL_CODE_VALUE":"","IS_DEBUG_VALUE":true]
     }
     buildTypes {
         release {
@@ -26,8 +26,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
 //    compile 'com.android.support:recyclerview-v7:24.0.0'
     //rxjava
-    compile 'io.reactivex:rxjava:1.1.3'
-    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
     //rxjava 内存泄漏问题的解决
     compile 'com.trello:rxlifecycle:0.6.1'
     // If you want pre-written Activities and Fragments you can subclass as providers
