--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,9 @@ android {
         versionCode 1
         versionName "1.0"
         manifestPlaceholders = [APP_NAME: "MyApplication", UMENG_CHANNEL_VALUE: "MyApplication","URL_CODE_VALUE":"","IS_DEBUG_VALUE":true]
-//        ndk {
-//            abiFilters   "armeabi" //"armeabi","armeabi-v7a"  // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
-//        }
+        ndk {
+            abiFilters   "armeabi-v7a","x86" //"armeabi","armeabi-v7a"  // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
+        }
     }
     buildTypes {
         release {
@@ -25,6 +25,9 @@ android {
 
 dependencies {
 //    compile fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     testCompile 'junit:junit:4.12'
 //    compile 'com.android.support:appcompat-v7:24.0.0'
 //    compile 'com.android.support:recyclerview-v7:24.0.0'
